--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,66 +1,59 @@
-name: Docker
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+name: docker-publish
 
 on:
   push:
     branches: [ "master" ]
-
-env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-      id-token: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # Workaround: https://github.com/docker/build-push-action/issues/461
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
-
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      - uses: actions/cache@v3.0.8
+        id: nix-cache
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          path: /tmp/nixcache
+          key: ${{ runner.os }}-nix-cache
 
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      - uses: cachix/install-nix-action@v15
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          extra_nix_config: 'experimental-features = nix-command flakes'
+          nix_path: nixpkgs=channel:nixos-unstable
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
+      - if: "steps.nix-cache.outputs.cache-hit == 'true'"
+        run: "nix-store --import < /tmp/nixcache"
+
+      - run: nix build .#dockerImage.$(uname -m)-linux -o result
+
+      - run: cat result > image.gz
+
+      - if: "steps.nix-cache.outputs.cache-hit != 'true'"
+        run: "nix-store --export $(find /nix/store -maxdepth 1 -name '*-*') > /tmp/nixcache"
+
+      - run: echo "TIDDLYWIKI_VERSION=$(nix eval .#version.$(uname -m)-linux --raw)" >> $GITHUB_ENV
+
+      - uses: actions-hub/docker/login@master
+        env:
+            DOCKER_USERNAME: "${{ github.actor }}"
+            DOCKER_PASSWORD: "${{ secrets.GITHUB_TOKEN }}"
+            DOCKER_REGISTRY_URL: ghcr.io
+
+      - uses: actions-hub/docker@master
         with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          args: load < /github/workspace/image.gz
+
+      - uses: actions-hub/docker@master
+        with:
+          args: tag ghcr.io/farcaller/tiddlywiki-docker:latest ghcr.io/farcaller/tiddlywiki-docker:${{ env.TIDDLYWIKI_VERSION }}
+
+      - uses: actions-hub/docker@master
+        with:
+          args: push ghcr.io/farcaller/tiddlywiki-docker:latest
+
+      - uses: actions-hub/docker@master
+        with:
+          args: push ghcr.io/farcaller/tiddlywiki-docker:${{ env.TIDDLYWIKI_VERSION }}
+
